# OmniPhotos

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Eigen.natvis  LICENSE  README.md  mainpage.hpp
.github/workflows/: cpp_build.yaml  main.yml  preproc_python_tests.yaml  python-package-conda.yml
CMakeModules/: FindEigen.cmake  FindOpenVR.cmake
Python/: ExtractPerspectiveViewsFrom360.py  cmake_deprecated_functions.py  compute_GT_image_metrics.py  convert_fraps_videos.py  deleteUnusedInputImages.py
Python/Notebooks/: 360 camera pose debugging.ipynb  Calibrate camera instrinsics.ipynb  Compute GT image metrics.ipynb  Convert cubemap to equirect.ipynb  Estimate BasisChange transformation.ipynb  Extract perspective view from 360 footage.ipynb  Generate camera paths.ipynb
Python/preprocessing/: abs_preprocessor.py  abs_ui.py  cl_ui.py  config_omniphotos.sample.yaml  data_preprocessor.py  graph_ui.py  main.py  of_preprocessor.py  op_preprocessor.py  post_process_kit.py  preproc_app.py  readme.md  render_traj.blend  requirements.txt  run.bat  run_test.bat  traj_preprocessor.py
Python/preprocessing/circlefitting/: __init__.py  cv_utils.py  datatypes.py  metrics.py
Python/preprocessing/circleselector/: __init__.py  computeColor.py  cv_utils.py  datatypes.py  loader.py  metrics.py  plotting_utils.py
Python/preprocessing/colmap/: ScriptingColmap.py  __init__.py  colmap2stepReconstruction.py
Python/preprocessing/flownet2/: datasets.py  flownet2.py  models.py
Python/preprocessing/images/: script_pipeline.drawio
Python/preprocessing/openvslam/: create_mask.py  image_util.cc  image_util.h  readme.md  run_camera_pose_reconstruction.cc  run_camera_pose_reconstruction_video.cc  run_image.sh  run_video.sh
Python/preprocessing/template/: config.template.yaml  openvslam.template.yaml
Python/preprocessing/test/: circlefitting_test.py  circleselector_test.py  colmap_test.py  gui_test.py  itests.py  main.py  paths.json  preprocessor_test.py  utests.py
Python/template_inis/: colmap_bundle_adjuster.ini  colmap_feature_extraction.ini  colmap_image_registrator.ini  colmap_patch_match_stereo.ini  colmap_point_triangulator.ini  colmap_stereo_fusion.ini  default.ini
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  conf.py  coordinates.md.html  index.rst  key-bindings-table.rst  requirements.txt
docs/demo/: README.md  conf.py  index.rst
src/: GitVersion.cpp.in  GitVersion.hpp  eigen.natvis  mainpage.hpp
src/Core/: Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DisplaySettings.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp
src/Core/CameraSetup/: CameraSetup.cpp  CameraSetup.hpp  CameraSetupDataset.cpp  CameraSetupDataset.hpp  CameraSetupSettings.cpp  CameraSetupSettings.hpp  CameraSetupVisualization.cpp  CameraSetupVisualization.hpp
src/Core/GL/: GLApplication.cpp  GLApplication.hpp  GLBuffer.cpp  GLBuffer.hpp  GLCamera.cpp  GLCamera.hpp  GLCameraControl.cpp  GLCameraControl.hpp  GLDefaultPrograms.cpp  GLDefaultPrograms.hpp  GLFW_Callbacks.hpp  GLFormats.cpp  GLFormats.hpp  GLFramebuffer.cpp  GLFramebuffer.hpp  GLObject.cpp  GLObject.hpp  GLProgram.cpp  GLProgram.hpp  GLProgramMaintenance.cpp  GLProgramMaintenance.hpp  GLRenderModel.cpp  GLRenderModel.hpp  GLRenderable.cpp  GLRenderable.hpp  GLSLFile.cpp  GLSLFile.hpp  GLSLParser.cpp  GLSLParser.hpp  GLTexture.cpp  GLTexture.hpp
src/Core/GUI/: Dialog.cpp  Dialog.hpp  GLWindow.cpp  GLWindow.hpp  InputHandler.cpp  InputHandler.hpp  Mouse.cpp  Mouse.hpp  VRInterface.cpp  VRInterface.hpp  WindowInfo.cpp  WindowInfo.hpp  omniphotos_bindings_generic.json  vr_actions.json
src/Core/Geometry/: Circle.cpp  Circle.hpp  Cylinder.cpp  Cylinder.hpp  Lines.cpp  Lines.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Point3D.cpp  Point3D.hpp  PointCloud.cpp  PointCloud.hpp  Primitive.cpp  Primitive.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
src/Core/Loaders/: ColmapLoader.cpp  ColmapLoader.hpp  FlowLoader.cpp  FlowLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  Loader.cpp  Loader.hpp  MultiViewDataLoader.hpp  OpenVSLAMLoader.cpp  OpenVSLAMLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Core/OpticalFlow/: FlowParameters.hpp  OpticalFlowApp.cpp  OpticalFlowApp.hpp
src/Paths/: Replica-3x3-cubemaps.csv  Replica-cubemaps.csv  cubemap.csv
src/Preprocessing/: CMakeLists.txt  Preprocessing-main.cpp
src/PreprocessingApp/: CMakeLists.txt  PreprocessingApp.cpp  PreprocessingApp.hpp  SphereFitting.cpp  SphereFitting.hpp  SphereFittingSettings.cpp  SphereFittingSettings.hpp
src/Shaders/: Readme.txt
src/Shaders/General/: ColourByPrimitiveID.fragment.glsl  ColourWorldPos.fragment.glsl  Default.vertex.glsl  Interleaved.vertex.glsl  MegaParallax.fragment.glsl  Megastereo.fragment.glsl  OpenVRCompanionWindow.fragment.glsl  OpenVRCompanionWindow.vertex.glsl  PassColour.vertex.glsl  PassWorldPositions.vertex.glsl  PassedColour.fragment.glsl  Quad.fragment.glsl  Quad.vertex.glsl  TextureMesh.fragment.glsl  (+1 more)
src/Test/: CMakeLists.txt  ColmapLoaderTest.cpp  OpenVSLAMLoaderTest.cpp  PreprocessingAppTest.cpp  README.md  Test-main.cpp  UnitTestHeader.hpp  UtilsTest.cpp
src/Tools/: CMakeLists.txt
src/Tools/CompTool/: CMakeLists.txt  CompTool-main.cpp  ssim.cpp  ssim.h
src/Tools/SphereFittingBenchmark/: CMakeLists.txt  SphereFittingBenchmark-main.cpp
src/Tools/SphereFittingBenchmark/Data/: apartment_0-depth.dpt  hotel_0-depth.dpt  office_0-depth.dpt  office_4-depth.dpt  readme.txt  room_0-depth.dpt  room_1-depth.dpt
src/Utils/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  DepthIO.cpp  DepthIO.hpp  EigenOpenGL.hpp  ErrorChecking.cpp  ErrorChecking.hpp  Exceptions.hpp  FileNodeParser.hpp  FlowIO.cpp  FlowIO.hpp  FlowVisualisation.cpp  FlowVisualisation.hpp  IOTools.hpp  Logger.cpp  Logger.hpp  STLutils.hpp  SettingEntry.hpp  SettingsSection.cpp  SettingsSection.hpp  Timer.hpp  Utils.cpp  Utils.hpp  cvutils.hpp
src/Viewer/: CMakeLists.txt  ImGuiUtils.hpp  Viewer-main.cpp  ViewerApp.cpp  ViewerApp.hpp  ViewerGLProgram.cpp  ViewerGLProgram.hpp  ViewerGUI.cpp  ViewerGUI.hpp
(+23 files in other folders)
